fixed overflow bugs

--- a/Styles/base.css
+++ b/Styles/base.css
@@ -6,6 +6,11 @@
   box-sizing: border-box;
 }
 
+body {
+  overflow-x: hidden;
+  width: 100%;
+}
+
 :root {
   /* Colors */
   --primary-background: #f7f2de;
